Several updates
Add .classpath
Add exemples
Add AgreementMakerLight
Remove Alignment API
Update Readme
Update gitignore